--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node": "^21.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
